--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     </div>
     <div class="row">
       <div class="col-md-3">
-        <h1>Ryeker</h1>
+        <h1>Alex</h1>
       </div>
       <div class="col-md-9">
-        <h3>I heard it on the radio, wanted a new job. etc.</h3>
+        <h3>I am looking for a Project Management position in the tech indsutry and I thought this was a good way to do that</h3>
       </div>
     </div>
   </div>
