--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>Alex</h1>
       </div>
       <div class="col-md-9">
-        <h3>I am looking for a Project Management position in the tech indsutry and I thought this was a good way to do that</h3>
+        <h3>I am looking for a Project Management position in the tech industry and I thought this was a good way start</h3>
       </div>
     </div>
   </div>
